ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: inventoryjs-frontend-ingressroute
  namespace: inventoryjs-frontend
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`findmyapp.net`)
      kind: Rule
      services:
        - name: frontend-service
          port: 80
  tls:
    secretName: findmyapp-net-staging-tls
